cropped image to better fit sizing, added media queries and repaired navbar sticky

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,8 +1,3 @@
-.force-right {
-  position: absolute;
-  right: 0;
-}
-
 nav {
   height: 80px;
   width: 100%;
