--- a/src/styles/sass/footer.sass
+++ b/src/styles/sass/footer.sass
@@ -9,7 +9,6 @@ footer
     background-image: $footer-background-image
     
     padding: 10px
-    margin-top: 20px
 
 .contact-info
     width: 100%
