--- a/src/styles/sass/global.sass
+++ b/src/styles/sass/global.sass
@@ -1,4 +1,4 @@
-$site-width: 100%
+$site-width: 80%
 $catchphrase-section-bg-color: #3b56a67F
 $catchphrase-bg-color: #333333
 $catchphrase-button-color: #FFFFFF
@@ -14,7 +14,6 @@ $font-weight-bold: 700
 
     font-family: Inter
     font-weight: $font-weight-regular
-    overflow-x: hidden
     
 html
     width: $site-width
@@ -108,8 +107,6 @@ html
 
     .force-right
         height: 100%
-
-        margin-right: -8px
         z-index: 0
 
     .js-logo
@@ -158,7 +155,10 @@ html
 
 .main-page-js-description
     .force-right
-        @media (max-width: 460px)
+        @media (max-width: 450px)
+            margin-right: -120%
+
+        @media (min-width: 451px) and (max-width: 460px)
             margin-right: -100%
 
         @media (min-width: 461px) and (max-width: 500px)
